--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,7 +9,7 @@
     tools:context=".SecondActivity">
 
     <TextView
-        android:id="@+id/secondActivityTextView"
+        android:id="@+id/secondActivityTextViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -17,14 +17,17 @@
         android:text="Hello Second"
         android:textSize="22dp" />
 
-    <TextView
-        android:id="@+id/secondActivityTextView1"
+    <EditText
+        android:id="@+id/secondActivityInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp" />
+
+    <Button
+        android:id="@+id/secondActivityApplyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="20dp"
-        android:text=""
-        android:textSize="22dp" />
-
+        android:text="Apply text"
+        android:layout_margin="20dp"/>
 
 </LinearLayout>
