--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="30dp"
+        android:layout_marginVertical="30dp"
         android:text="Open Old" />
 
     <Button
@@ -29,8 +29,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="100dp"
+        android:layout_marginVertical="100dp"
         android:text="Open New" />
+
+    <Button
+        android:id="@+id/mainActivityButtonC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginVertical="165dp"
+        android:text="Open Gallery" />
+
+    <ImageView
+        android:id="@+id/mainActivityImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="100dp" />
 
 
 </FrameLayout>
